--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
             aria-label="To many notes on PDF?"
             ng-click="showCheckbox()"
             class="md-warn md-align-top-left" ng-disabled="true" flex>
-            Done!
+            All notes are deleted
           </md-checkbox>
-          <md-button class="md-raised md-primary" type="submit" ng-disabled="true">All notes are deleted</md-button>
+          <md-button class="md-raised md-primary" type="submit" ng-disabled="true">Done!</md-button>
         </div>
       </p> 
       <br />   
@@ -160,9 +160,9 @@
               aria-label="To many notes on PDF?"
               ng-click="sprintshowCheckbox()"
               class="md-warn md-align-top-left" ng-disabled="true" flex>
-              Done!
+              All notes are deleted
             </md-checkbox>
-            <md-button class="md-raised md-primary" type="submit" ng-disabled="true">All notes are deleted</md-button>
+            <md-button class="md-raised md-primary" type="submit" ng-disabled="true">Done!</md-button>
           </div>
         </p> 
       </div>
