--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <td>Change <span class="bold">story</span> font size</td>
                 <td><input type="text" placeholder="Put in a number (required)" id="sprintstoryFontSize" value="19"></input></td>
             </tr>
-            <tr>
+            <tr id="hideNotesFontSize">
                  <td>Change <span class="bold">notes</span> font size</td>
                  <td><input type="text" placeholder="Put in a number (required)" id="sprintnotesFontSize" value="12"></input></td>
             </tr>
