--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <md-button class="md-raised md-primary" type="submit" id="btnPrintPDFSprint">PRINT sprint as PDF</md-button> 
         <md-button class="md-raised md-primary" type="submit" id="btnOpenPDFSprint">OPEN sprint as PDF</md-button> 
         <md-button class="md-raised md-primary" type="submit" id="btnSavePDFSprint">SAVE sprint as PDF</md-button>
+        <span id="sprintfontSizeAlert">You must fill in a story (default: 19) and notes (default: 12) font size!</span>
       </p>
       <br />
       <p id="creatingTime">
