--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <td>Change <span class="bold">story</span> font size</td>
               <td><input type="text" placeholder="Put in a number (required)" id="storyFontSize" value="19"></input></td>
           </tr>
-          <tr>
+          <tr id="hideStoryNotesFontSize">
                <td>Change <span class="bold">notes</span> font size</td>
                <td><input type="text" placeholder="Put in a number (required)" id="notesFontSize" value="12"></input></td>
           </tr>
