--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <md-content>
         <md-tabs md-dynamic-height md-border-bottom>
           <md-tab label="one">
-
+            <md-content class="md-padding">
               <!-- input fields to show story -->
               <div id="storyDiv">
                 <h1>Story</h1>
@@ -205,10 +205,10 @@
                   </table>
                 </form>
               </div>
-
+             </md-content>
           </md-tab>
           <md-tab label="two">
-
+              <md-content class="md-padding">
               <div id="sprintDiv">
               <!-- input fields to show sprint -->
               <div id="controlsSprint">
@@ -229,7 +229,7 @@
                     </table>
                   </form>
               </div>
-
+             </md-content>
           </md-tab>
         </<md-tabs>
       </md-content>
