--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <md-tab label="one">
             <md-content class="md-padding">
               <!-- input fields to show story -->
-              <div id="storyDiv">
+              <p id="storyDiv">
                 <h1>Story</h1>
                 <p> Please fill in a story number. </p>
                 <form id="controls">
@@ -204,30 +204,31 @@
                     </tr>
                   </table>
                 </form>
-              </div>
+              </p>
              </md-content>
           </md-tab>
           <md-tab label="two">
               <md-content class="md-padding">
               <div id="sprintDiv">
-              <!-- input fields to show sprint -->
-              <div id="controlsSprint">
-                  <h1>Sprint</h1>
-                  <p> Please fill in a sprint number. See url in Aha! for the sprint number.</p>
-                  <form id="controls">
-                    <table>
-                      <tr>
-                        <!-- Aha! subdomain -->
-                        <td><input type="text" placeholder="Aha! subdomain" id="subdomain" value="sablono" disabled></input></td>
-                      </tr>
-                      <tr>
-                        <!-- Sprint Number -->
-                        <td><input type="text" placeholder="Sprint number" id="sprintNumber" value="WEB-R-"></input></td>
-                        <td><md-button class="md-raised md-primary right orangeBtn" id="btnShowStory" type="submit">Show sprint</md-button></td>
+                <!-- input fields to show sprint -->
+                <div id="controlsSprint">
+                    <h1>Sprint</h1>
+                    <p> Please fill in a sprint number. See url in Aha! for the sprint number.</p>
+                    <form id="controls">
+                      <table>
+                        <tr>
+                          <!-- Aha! subdomain -->
+                          <td><input type="text" placeholder="Aha! subdomain" id="subdomain" value="sablono" disabled></input></td>
+                        </tr>
+                        <tr>
+                          <!-- Sprint Number -->
+                          <td><input type="text" placeholder="Sprint number" id="sprintNumber" value="WEB-R-"></input></td>
+                          <td><md-button class="md-raised md-primary right orangeBtn" id="btnShowStory" type="submit">Show sprint</md-button></td>
 
-                      </tr>
-                    </table>
-                  </form>
+                        </tr>
+                      </table>
+                    </form>
+                </div>
               </div>
              </md-content>
           </md-tab>
