--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               </div>
              </md-content>
           </md-tab>
-        </<md-tabs>
+        </md-tabs>
       </md-content>
     </div>
 
