--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 
     <div id="step1Container" class="paddingContainer" ng-cloak>
       <md-content>
-        <md-tabs md-dynamic-height md-border-bottom>
-          <md-tab label="one">
+        <md-tabs md-dynamic-height>
+          <md-tab label="LO">
             <md-content class="md-padding">
               <!-- input fields to show story -->
               <p id="storyDiv">
@@ -207,7 +207,7 @@
               </p>
              </md-content>
           </md-tab>
-          <md-tab label="two">
+          <md-tab label="EVE">
               <md-content class="md-padding">
               <div id="sprintDiv">
                 <!-- input fields to show sprint -->
