--- a/index.html
+++ b/index.html
@@ -205,11 +205,46 @@
                   </table>
                 </form>
               </p>
+              <div id="controlsSprint">
+                    <h1>Sprint</h1>
+                    <p> Please fill in a sprint number. See url in Aha! for the sprint number.</p>
+                    <form id="controls">
+                      <table>
+                        <tr>
+                          <!-- Aha! subdomain -->
+                          <td><input type="text" placeholder="Aha! subdomain" id="subdomain" value="sablono" disabled></input></td>
+                        </tr>
+                        <tr>
+                          <!-- Sprint Number -->
+                          <td><input type="text" placeholder="Sprint number" id="sprintNumber" value="WEB-R-"></input></td>
+                          <td><md-button class="md-raised md-primary right orangeBtn" id="btnShowStory" type="submit">Show sprint</md-button></td>
+
+                        </tr>
+                      </table>
+                    </form>
+                </div>
              </md-content>
           </md-tab>
           <md-tab label="EVE">
               <md-content class="md-padding">
               <div id="sprintDiv">
+                <p id="storyDiv">
+                <h1>Story</h1>
+                <p> Please fill in a story number. </p>
+                <form id="controls">
+                  <table>
+                    <tr>
+                      <!-- Aha! subdomain -->
+                      <td><input type="text" placeholder="Aha! subdomain" id="subdomain" value="sablono" disabled></input></td>
+                    </tr>
+                    <tr>
+                      <!-- Story Number -->
+                      <td><input type="text" placeholder="Story number" id="storyNumber" value="WEB-"></input></td>
+                      <td><md-button class="md-raised md-primary right orangeBtn" id="btnShowStory" type="submit">Show story</md-button></td>
+                    </tr>
+                  </table>
+                </form>
+              </p>
                 <!-- input fields to show sprint -->
                 <div id="controlsSprint">
                     <h1>Sprint</h1>
