--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
     <div id="step1Container" class="paddingContainer" ng-cloak>
       <md-content>
-        <md-tabs md-dynamic-height>
+        <md-tabs md-dynamic-height md-border-bottom>
           <md-tab label="LO">
             <md-content class="md-padding">
               <!-- input fields to show story -->
