--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <p id="storyDiv">
                 <h1>Story</h1>
                 <p> Please fill in a story number. </p>
-                <form id="controls">
+                <form id="controlsLO">
                   <table>
                     <tr>
                       <!-- Aha! subdomain -->
@@ -205,7 +205,7 @@
                   </table>
                 </form>
               </p>
-              
+
               <div id="controlsSprint">
                     <h1>Sprint</h1>
                     <p> Please fill in a sprint number. See url in Aha! for the sprint number.</p>
@@ -232,7 +232,7 @@
                 <p id="storyDiv">
                 <h1>Story</h1>
                 <p> Please fill in a story number. </p>
-                <form id="controls">
+                <form id="controlsEVE">
                   <table>
                     <tr>
                       <!-- Aha! subdomain -->
