--- a/index.html
+++ b/index.html
@@ -197,6 +197,16 @@
               <!-- Story Number -->
               <td><input type="text" placeholder="Story number" id="storyNumber" value="WEB-"></input></td>
               <td><md-button class="md-raised md-primary right orangeBtn" id="btnShowStory" type="submit">Show story</md-button></td>
+              <td>
+                
+                <md-checkbox
+                    ng-model="areyoueve"
+                    aria-label="Are you EVE?F"
+                    class="md-warn md-align-top-left" id="areyoueveStory" flex>
+                    Are you EVE?
+                </md-checkbox>
+
+              </td>
             </tr>
           </table>
         </form>
@@ -218,7 +228,16 @@
                 <!-- Sprint Number -->
                 <td><input type="text" placeholder="Sprint number" id="sprintNumber" value="WEB-R-"></input></td>
                 <td><md-button class="md-raised md-primary right orangeBtn" id="btnShowStory" type="submit">Show sprint</md-button></td>
+                <td>
+                
+                  <md-checkbox
+                      ng-model="areyoueve"
+                      aria-label="Are you EVE?F"
+                      class="md-warn md-align-top-left" id="areyoueveSprint" flex>
+                      Are you EVE?
+                  </md-checkbox>
 
+                </td>
               </tr>
             </table>
           </form>
