--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           </md-checkbox>
           <md-button class="md-raised md-primary" id="sprintbtnDeleteNotes" type="submit">Confirm</md-button>
 
-          <div id="sprintdeleteNotesDone">
+<!--           <div id="sprintdeleteNotesDone">
             <md-checkbox
               ng-model="sprintcheckbox"
               aria-label="To many notes on PDF?"
@@ -164,7 +164,7 @@
               All notes are deleted
             </md-checkbox>
             <md-button class="md-raised md-primary" type="submit" ng-disabled="true">Done!</md-button>
-          </div>
+          </div> -->
         </p> 
       </div>
       <br />   
