--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
 
       <div id="sprintDiv">
       <!-- input fields to show sprint -->
-      <div id="controlsSprint">
+     <!--  <div id="controlsSprint"> -->
           <h1>Sprint</h1>
           <p> Please fill in a sprint number. See url in Aha! for the sprint number.</p>
-          <form id="controls">
+          <form id="controlsSprint">
             <table>
               <tr>
                 <!-- Aha! subdomain -->
